# fair-lending-screener

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: data-health.yml  release.yml  test.yml
docs/: limitations.md  methodology.md
docs/examples/: quickstart.md
docs/rate-spread/: 0.2.2-CORRECTION-SPEC.md  AUDIT-1-TRIAGE.md  AUDIT-2-HOSTILE-FINDINGS.md  AUDIT-2-TRIAGE.md  AUDIT-3-HOSTILE-FINDINGS.md  AUDIT-3-TRIAGE.md  AUDIT-4-TRIAGE.md  AUDIT-5-TRIAGE.md  BARTLETT-DIRECT-READ.md  CREDIT-PROXY-DATA-CHECK.md  DENIAL-ENGINE-BACKLOG.md  fair-lending-screener-v0.3.0-rate-spread-methodology-OUTLINE.md  methodology-v2-HOSTILE-AUDIT-PROMPT.md  methodology-v2-rate-spread.md  methodology-v3-HOSTILE-AUDIT-PROMPT.md  methodology-v3-rate-spread.md  methodology-v4-HOSTILE-AUDIT-PROMPT.md  methodology-v4-rate-spread.md  methodology-v5-HOSTILE-AUDIT-PROMPT.md  methodology-v5-rate-spread.md  v0.3.0-methodology-HOSTILE-AUDIT-PROMPT.md  v0.3.0-methodology-VERIFICATION-LOG.md
examples/: README.md  demo_fair_lending_screener.ipynb  disparity_demo.ipynb
fair_lending_screener/: __init__.py  _docs.py  _limitations_doc.md  _methodology_doc.md  data.py  disparity.py  exceptions.py  methodology.py  report.py
fairlendingscreener/: __init__.py
tests/: test_disparity.py  test_edge_cases.py  test_known_results.py  test_report.py
