[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-lending-screener"
version = "0.2.0"
description = "Statistical disparate impact analysis for HMDA data — the methodology federal examiners use, open-sourced for community advocates"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Jay Patel", email = "thejaypatel1511@gmail.com" }
]
keywords = [
    "fair-lending",
    "hmda",
    "disparate-impact",
    "community-development",
    "fair-housing",
    "mortgage",
    "civil-rights",
    "statistics",
    "logistic-regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
]
dependencies = [
    "hmda-analyzer>=0.1.0",
    "pandas>=1.4",
    "numpy>=1.21",
    "statsmodels>=0.13",
    "scipy>=1.9",
    "requests>=2.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "build",
    "twine",
    "notebook",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/fair-lending-screener"
"Bug Tracker" = "https://github.com/Jaypatel1511/fair-lending-screener/issues"
Documentation = "https://github.com/Jaypatel1511/fair-lending-screener/tree/main/docs"
PyPI = "https://pypi.org/project/fair-lending-screener/"
Methodology = "https://github.com/Jaypatel1511/fair-lending-screener/blob/main/docs/methodology.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_lending_screener*", "fairlendingscreener*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.ipynb", "*.cff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib"
markers = [
    "live: marks tests that require live CFPB API access (deselect with -m 'not live')",
    "slow: marks tests that take more than 10 seconds",
]

[tool.coverage.run]
source = ["fair_lending_screener"]
omit = ["tests/*", "examples/*"]
